# kojo-bot-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =5.0.0  FINAL_REPORT.md  MANIFEST.md  PRODUCTION_SIGNOFF.md  alembic.ini  pre-commit.sh  pyproject.toml  pyproject.toml.bak.8.1  requirements-prod.txt  requirements.lock.txt  requirements.txt
.gitea/workflows/: ci.yml
.githooks/: pre-commit
alembic/: env.py
alembic/versions/: 001_initial.py  002_indexes.py  003_missing_tables.py  004_event_store.py  005_tenant_rls.py  __init__.py  bccff3b5b9ff_add_order_rating_fields.py
config/: ai_barista.txt  memory_analyzer_prompt.txt  prompt.txt  router_prompt_template.txt
data/base/: database.txt  products_knowledge.txt
deploy/: CHECKLIST.md  RUNBOOKS.md  install-bare-metal.sh  kojo-bot.service  vault-agent.hcl
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.multistage  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  requirements.txt
docs/: BASELINE_AUDIT.md  CI_TRIGGER_TEST.md  DB_BACKUP_RESTORE.md  DEPLOYMENT_RUNBOOK.md  DEVELOPMENT_FLOW.md  DOCKER_BOOTSTRAP.md  ENVIRONMENTS.md  EXCEPTION_POLICY.md  GATEWAY_HMAC_CONTRACT.md  POST_EXTRACTION_STATUS.md  RELEASES.md  RUNNER_OPERATIONS.md  TECH_DEBT.md  TYPING_DEBT.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  (+13 more)
scripts/: backup_db.sh  backup_postgres.sh  setup_app_role.sql
services/: proxy_adapter.py  proxy_pool.py
tests/: conftest.py  test_admin_package.py  test_admin_panel_handler.py  test_admin_panel_smoke.py  test_ai_chat_handler.py  test_ai_communication_service.py  test_application_base.py  test_application_queries.py  test_cache.py  test_callback_validator.py  test_cart_service.py  test_cart_validator.py  test_common_handler.py  test_communication_service.py  test_config_manager.py  test_config_safety.py  test_config_service.py  test_correlation.py  test_database_integration.py  test_database_manager_rls_role.py  test_db_monitoring.py  test_db_pool_lifecycle.py  test_decorators_validator_llm_smoke.py  test_di_provider_tenant_connections.py  test_dlq.py  test_dlq_integration.py  test_docs_structure.py  test_domain_events.py  test_domain_order.py  test_env_utils.py  test_event_handlers.py  test_event_store_integration.py  test_favorite_service.py  test_favorites_handler.py  test_favorites_user_panel_staff_smoke.py  test_feature_flags_integration.py  test_fsm_router.py  test_gateway_circuit_breaker.py  test_gateway_integration.py  test_gateway_retry_policy.py  (+74 more)
tg_bot/: __init__.py  app_config.py  callback_validator.py  callbacks.py  config_service.py  db_monitoring.py  decorators.py  http_client.py  keyboards.py  llm_client.py  main.py  models.py  navigation.py  navigation_registry.py  rate_limit_middleware.py  test_db_schema.py  types.pyi  ui_actions.py  ui_helpers.py
user_profiles/: 368228657.json
utils/: config_pusher.py  env_utils.py  image_cache.py  logging_setup.py  retry.py  ui_formatters.py
(+151 files in other folders)
